--- a/about.html
+++ b/about.html
@@ -159,7 +159,7 @@ system from $1790 per person.">
         <div class="z-index">
         <h4 class ="h4-alt black">ABOUT US</h4>
         <h1 class="h3-h1-subpage day-tour-h1">With over a decade of experience, we guide anglers from around the world to Iceland’s most pristine fly fishing destinations</h1>
-        <h2 class="h1-h2 day-tour-h2">
+        <h2 class="h1-h2 day-tour-h2 sub-h1-h2">
           Let us guide you to unforgettable moments in one of the world’s most remarkable fishing destinations. Get in touch to explore options.
         </h2>
 
