--- a/index.html
+++ b/index.html
@@ -600,12 +600,12 @@ system from $1890 per person.">
           Full private lodging and river<br> system from <span class="price-loopy">$1790</span> per person
         </h3>
              <div class="button-container desktop-show">
-               <button class = "btn-bottom" id="openModal">Book your spot now</button>
+               <button class = "btn-bottom desktop-show" id="openModal">Book your spot now</button>
                <button class="openModal-2 secondary">Contact us</button>
              </div>
 
              <div class="button-container mobile-show">
-               <button id="openModal">Book your spot</button>
+                <a href ="reserve.html" class ="btn-bottom mobile-show">Book your spot</a>
                <button class="openModal-2 secondary">Contact</button>
              </div>
 
