--- a/thank-you.html
+++ b/thank-you.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <head>
 
-  <script src="https://cdn.lrkt-in.com/LogRocket.min.js" crossorigin="anonymous"></script>
-  <script>window.LogRocket && window.LogRocket.init('ya3mbw/wildline');</script>
+    <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-G50VZ2C3SE"></script>
+  
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
+    gtag('config', 'G-G50VZ2C3SE');
+  </script>
 
   <!-- Google tag (gtag.js) event -->
   <script>
