--- a/index.html
+++ b/index.html
@@ -154,11 +154,11 @@ system from $1890 per person.">
     <div class="hero">
       <div class="hero-left">
         <div class="z-index">
-<h4 class="loopy-date desktop-show space-left">
+<h4 class="loopy-date space-left">
   available&nbsp;<em data-alt>A</em>pril&nbsp;&ndash;&nbsp;<em data-alt>S</em>eptember
 </h4>      
 
-  <h3 class="h3-h1">River Lýsa</h3>
+  <h3 class="h3-h1 space-left">River Lýsa</h3>
         <h1 class="white h1-h2 space-left">
           Unforgettable fly fishing journey in west Iceland
         </h2>
@@ -591,12 +591,12 @@ system from $1890 per person.">
           <video poster ="img/poster.webp"class="video-insert video-insert-2" autoplay loop muted playsinline><source src="img/char.mp4" loading="lazy" type="video/mp4"></video>
            <div class="sec-7-right">
             <span class = "loopy-on-dark loopy-section-span">
-  Available&nbsp;<em data-alt>A</em>pril&nbsp;&ndash;&nbsp;<em data-alt>S</em>eptember</span>
+  available&nbsp;<em data-alt>A</em>pril&nbsp;&ndash;&nbsp;<em data-alt>S</em>eptember</span>
              <h2 class ="white">Ready to embark on an unforgettable fly fishing adventure?</h2>
-        <h2 class="h2-h3">
+        <h2 class="h2-h3 h2-h3-2">
           Full private lodging and river<br> system from <span class="price-loopy">$1790</span> per person
         </h3>
-             <div class="button-container desktop-show">
+             <div class="button-container button-container-2 desktop-show">
                <button class = "btn-bottom desktop-show" id="openModal">Book your spot now</button>
                <button class="openModal-2 secondary">Contact us</button>
              </div>
@@ -724,7 +724,7 @@ system from $1890 per person.">
                           </div>
 
                           <div class="quote-text">
-                            <h2 class = "quote-loopy">"I have to say this was hands down the single best fly fishing day of my life, the type of thing a fly angler dreams of.</h2>
+                            <h2 class = "quote-loopy">"I have to say this was hands down the single best fly fishing day of my life, the type of thing a fly angler dreams of."</h2>
                             <span>Ethan Darden '25</span>
                           </div>
 
