--- a/index.html
+++ b/index.html
@@ -162,7 +162,10 @@ system from $1890 per person.">
         <h1 class="white h1-h2 space-left">
           Unforgettable fly fishing journey in west Iceland
         </h2>
-        <h2 class="h2-h3 space-left">
+        <h2 class="desktop-show-2 h2-h3 space-left">
+          Full private lodging and river<br> system from <span class="price-loopy">$1790</span> per person
+        </h2>
+        <h2 class="mobile-show-2 h2-h3-mobile space-left">
           Full private lodging and river<br> system from <span class="price-loopy">$1790</span> per person
         </h2>
         <div class="button-container">
@@ -700,7 +703,7 @@ system from $1890 per person.">
 
                                                       </div>
                                                   </div>
-                                                  <input type="hidden" name="redirect" value="https://yourwebsite.com/thank-you?email=" />
+                                                  <input type="hidden" name="redirectfile:///Users/s.mcduck/Documents/GitHub/solonorn.github.io/img/hero-back.jpg" value="https://yourwebsite.com/thank-you?email=" />
                                                   <div class="form-cta form-cta-mobile">
                                                       <button type="submit">Send Request</button>
                                                       <span>Reserve dates now, pay later</span>
