--- a/index.html
+++ b/index.html
@@ -596,9 +596,12 @@ system from $1890 per person.">
             <span class = "loopy-on-dark loopy-section-span">
   available&nbsp;<em data-alt>A</em>pril&nbsp;&ndash;&nbsp;<em data-alt>S</em>eptember</span>
              <h2 class ="white">Ready to embark on an unforgettable fly fishing adventure?</h2>
-        <h2 class="h2-h3 h2-h3-2">
+        <h2 class="desktop-show-2 h2-h3 space-left">
           Full private lodging and river<br> system from <span class="price-loopy">$1790</span> per person
-        </h3>
+        </h2>
+        <h2 class="mobile-show-2 h2-h3-mobile space-left">
+          Full private lodging and river<br> system from <span class="price-loopy">$1790</span> per person
+        </h2>
              <div class="button-container button-container-2 desktop-show">
                <button class = "btn-bottom desktop-show" id="openModal">Book your spot now</button>
                <button class="openModal-2 secondary">Contact us</button>
