--- a/about.html
+++ b/about.html
@@ -159,7 +159,7 @@ system from $1790 per person.">
           Let us guide you to unforgettable moments in one of the world’s most remarkable fishing destinations. Get in touch to explore options.
         </h2>
 
-        <div class="button-container">
+<div class="button-container" style="width: auto;">
           <button class="openModal-2 day-tour-button">Reserve now</button>
         </div>
       </div>
