--- a/day-tours.html
+++ b/day-tours.html
@@ -153,7 +153,7 @@ system from $1490 per person.">
     <div class="hero day-tour-hero">
       <div class="hero-left day-tour-hero">
         <div class="z-index">
-        <h4 class ="grey">DAY TOURS</h4>
+        <h4 class ="grey sub-h4">DAY TOURS</h4>
         <h1 class="white h3-h1-subpage day-tour-h1 desktop-show">Fly Fishing<br> Day Tours from<br> Reykjavík</h1>
         <h1 class="white h3-h1-subpage day-tour-h1 mobile-show">Fly Fishing Day Tours from Reykjavík</h1>
         <h2 class="white h1-h2 day-tour-h2 sub-h1-h2">
@@ -175,7 +175,7 @@ system from $1490 per person.">
                 </div> 
               </div>
 
-        <div class="button-container">
+<div class="button-container" style="width: auto;">
           <button class="openModal-2 day-tour-button">Get in touch</button>
         </div>
       </div>
