--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@ system from $1890 per person.">
         <h2 class="desktop-show-2 h2-h3 space-left">
           Full private lodging and river<br> system from <span class="price-loopy">$1790</span> per person
         </h2>
-        <h2 class="mobile-show-2 h2-h3-mobile space-left">
+<h2 class="mobile-show-2 h2-h3-mobile space-left" style="text-align: center !important;">
           Full private lodging and river<br> system from <span class="price-loopy">$1790</span> per person
         </h2>
              <div class="button-container button-container-2 desktop-show">
@@ -607,10 +607,10 @@ system from $1890 per person.">
                <button class="openModal-2 secondary">Contact us</button>
              </div>
 
-             <div class="button-container mobile-show">
-                <a href ="reserve.html" class ="btn-bottom mobile-show">Book your spot</a>
-               <button class="openModal-2 secondary">Contact</button>
-             </div>
+             <div class="button-container mobile-show" style="/* align-items: center; */ justify-content: center;">
+                             <a href="reserve.html" class="btn-bottom mobile-show">Book your spot</a>
+                            <button class="openModal-2 secondary">Contact</button>
+                          </div>
 
              <p></p>
 
