--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
   <link rel="stylesheet" href="glightbox.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-title" content="Wildline">
+  <meta name="theme-color" content="#2A2E28">
 
   <link rel="icon" href="/favicon.ico" sizes="any">
   <link rel="icon" href="/favicon.ico">
